[gd_scene load_steps=2 format=2]

[ext_resource path="res://Options menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1020.0
margin_bottom = 338.0

[node name="Disable" type="Button" parent="VBoxContainer"]
margin_right = 1020.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Disable mouse cursor"

[node name="Enable" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 1020.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Enable mouse cursor"

[node name="Return to main menu" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 1020.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back to main menu"

[connection signal="pressed" from="VBoxContainer/Disable" to="." method="_on_Disable_pressed"]
[connection signal="pressed" from="VBoxContainer/Enable" to="." method="_on_Enable_pressed"]
[connection signal="pressed" from="VBoxContainer/Return to main menu" to="." method="_on_Return_to_main_menu_pressed"]
